<resources>
    <string name="app_name">VaxTracker</string>

    <string name="home_icon">Vax Tracker Icon</string>
    <string name="searchicon">Search Icon</string>
    <string name="welcome">Welcome to Vax Tracker!</string>
    <string name="zipcode_hint">Enter Your Zip Code</string>
    <string name="location_button">Find a Location Near You</string>
    <string name="currentlocation_button">Use My Current Location</string>

    <string name="new_zip">Enter New Zip Code</string>
    <string name="display_locations">Locations near</string>
    <string name="current_location"> ---current location placeholder---</string>

    <string name="AppointmentDetails">Monday, June 5th @2:30PM</string>
    <string name="AppointmentReview">Please review your appointment details below:</string>
    <string name="AddToCalButton">Add to Your Calendar</string>
    <string name="ConfirmText">You\'re All Set!</string>
    <string name="calicon">CalIcon</string>
    <string name="Location">Fred Meyer</string>
    <string name="LocationAddress">12221 120th Ave NE, Kirkland, WA 98034</string>


    <string name="SelectDifferentLocation"> Select a Different Location</string>
    <string name="ScheduleOnline"> 🌎 Schedule Appointment Online</string>
    <string name="PhoneNumber"> 📞 555-555-5555</string>

    <string-array name="found_locations">
        <item>Loc 1</item>
        <item>Loc 2</item>
        <item>Loc 3</item>
    </string-array>

</resources>